--- a/Flex_Layout/BLOG_Detail.html
+++ b/Flex_Layout/BLOG_Detail.html
@@ -11,7 +11,7 @@
     <div class="header">
       <ul>
         <li><a href="#">首頁</a></li>
-        <li><a href="#">部落格</a></li>
+        <li><a href="BLOG_Flex.html">部落格</a></li>
       </ul>
     </div>
 
